# Django-Auth-Server

./: .env.example  .gitignore  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/users/: admin.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
client/: .dockerignore  package-lock.json  package.json
client/docker/local/: Dockerfile  Dockerfile.prod
client/src/app/: page.js
client/src/app/dashboard/: loading.js  page.js
client/src/app/login/: page.js
client/src/app/register/: page.js
client/src/app/token/: route.js
docker/local/django/: Dockerfile  entrypoint
docker/local/django/celery/flower/: start
docker/local/django/celery/worker/: start
docker/local/nginx/: Dockerfile  default.conf
docker/local/postgres/: start.sh
sso_config/: asgi.py  celery.py  settings_base.py  settings_dev.py  urls.py  wsgi.py
