[tool.poetry]
name = "django-auth-server"
version = "0.1.0"
description = ""
authors = ["Kojo <boakyeni@usc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
djoser = "^2.2.2"
django-oauth-toolkit = "^2.3.0"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
flower = "^2.0.1"
redis = "^5.0.1"
celery = "^5.3.5"
django-celery-email = "^3.0.0"
watchdog = "^3.0.0"
phonenumbers = "^8.13.25"
django-phonenumber-field = "^7.2.0"
psycopg = {extras = ["binary"], version = "^3.1.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
